--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "atob": "^2.1.1",
     "body-parser": "^1.18.3",
+    "dom-parser": "^0.1.5",
     "express": "^4.16.3",
     "pdftk": "0.0.0-rc.0",
     "svg-to-pdfkit": "^0.1.7"
